--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ annotated-types==0.7.0
 asgiref==3.8.1
 attrs==25.1.0
 certifi==2025.1.31
+DateTime==5.5
 Django==5.1.6
 djangorestframework==3.15.2
 frozenlist==1.5.0
@@ -16,6 +17,8 @@ multidict==6.1.0
 propcache==0.3.0
 pydantic==2.10.6
 pydantic_core==2.27.2
+pytz==2025.1
 sqlparse==0.5.3
 typing_extensions==4.12.2
 yarl==1.18.3
+zope.interface==7.2
