--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ certifi==2025.1.31
 DateTime==5.5
 Django==5.1.6
 djangorestframework==3.15.2
+dotenv==0.9.9
 frozenlist==1.5.0
 idna==3.10
 magic-filter==1.0.12
@@ -17,6 +18,7 @@ multidict==6.1.0
 propcache==0.3.0
 pydantic==2.10.6
 pydantic_core==2.27.2
+python-dotenv==1.0.1
 pytz==2025.1
 sqlparse==0.5.3
 typing_extensions==4.12.2
