--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ attrs==25.1.0
 certifi==2025.1.31
 DateTime==5.5
 Django==5.1.6
+django-cors-headers==4.7.0
 djangorestframework==3.15.2
 dotenv==0.9.9
 frozenlist==1.5.0
